<resources>
    <string name="app_name">智能家居</string>
    <string name="app_name_logo">Smart</string>
    <string name="person_text_feedback">意见反馈</string>
    <string name="person_text_current_version">当前版本</string>
    <string name="back">返回</string>
    <string name="app_splash_text">Copyright © 2017 Smart All Rights Reserved\nPowered by technology1303</string>
    <string name="edit_equip_text_hint">请编辑设备名称（如：卧室主灯）</string>
    <string name="textview_equip_text_hint">请点击二维码添加设备</string>
    <string name="control_object_text">控制对象:</string>
    <string name="please_add_equip">请先添加设备</string>

    <string name="save">保存</string>
    <string name="cancel">取消</string>

    <string name="pic_click_to_reload">点击重新加载</string>
    <string name="pic_save">保存图片</string>
    <string name="pic_share">分享图片</string>
    <string name="go_login">登录</string>
    <string name="login_out">确认退出</string>
    <string name="loading">正在加载</string>
    <string name="person_text_equip">我的设备</string>
    <string name="safe_lock">安全设置</string>
    <string name="set_password">设置密码</string>
    <string name="delete">删除</string>
    <string name="equip_manager_right">编辑</string>
    <string name="person_know_text">知道了</string>


    <string name="feedback_content_hit">欢迎提交反馈</string>
    <string name="feedback_contact_hit">您的手机号或邮箱，便于联系您</string>
    <string name="feedback_success">反馈成功</string>
    <string name="feedback_fail">反馈失败</string>
    <string name="feedback">反馈建议</string>
    <string name="feedback_input_content_tip">请填写反馈信息</string>
    <string name="please_select_equip">请先选择设备</string>
    <string name="please_open_bulb">请先点亮灯泡</string>
    <string name="please_open_equip">请先打开设备</string>
    <string name="please_open_tv">请先打开电视</string>
    <string name="please_open_air_condition">请先打开空调</string>
    <string name="delete_success">删除成功</string>
    <string name="control_equip">控制对象</string>
    <string name="local_net_not_connect">设备尚未连接</string>
    <string name="add_equip_text">添加设备</string>
    <string name="please_connect_network">请先连接网络</string>
    <string name="current_version">智能家居 1.0</string>
    <string name="device_no_infrared_function">抱歉！您的设备没有红外功能</string>
    <string name="please_draw_password">请绘制图案密码</string>
    <string name="clear_password">清除密码</string>
    <string name="password_error_and_try_again">密码错误，请重试</string>
    <string name="confirm">确认</string>
    <string name="please_draw_pattern_confirm">再次绘制图案进行确认</string>
    <string name="limit_five_point">至少5个点</string>
    <string name="password_error">密码错误</string>
    <string name="press_confirm_finish_setting">按确认，完成设置</string>
    <string name="please_try_again">请重试</string>
    <string name="please_press_continue">请按继续</string>
    <string name="please_continue">继续</string>
    <string name="try_again">重试</string>
    <string name="please_draw_pattern">请绘制图案</string>
    //操作记录数据库
    <string name="data_open_bulb">打开电灯</string>
    <string name="data_close_bulb">关闭电灯</string>
    <string name="data_brightness_up">增加电灯亮度</string>
    <string name="data_brightness_down">减小电灯亮度</string>

    <string name="data_open_tv">打开电视</string>
    <string name="data_close_tv">关闭电视</string>
    <string name="data_channel_up">增加电视频道</string>
    <string name="data_channel_down">减小电视频道</string>
    <string name="data_sound_up">增加电视音量</string>
    <string name="data_sound_down">减小电视音量</string>

    <string name="data_open_airCondition">打开空调</string>
    <string name="data_close_airCondition">关闭空调</string>
    <string name="data_mode_up">上调空调模式</string>
    <string name="data_mode_down">下调空调模式</string>
    <string name="data_temp_up">增加空调温度</string>
    <string name="data_temp_down">减小空调温度</string>

    <string name="data_open_fan">打开风扇</string>
    <string name="data_close_fan">打开风扇</string>
    <string name="data_speed_up">增加风速</string>
    <string name="data_speed_down">减小风速</string>
</resources>
