<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/margin_view"
    android:layout_marginRight="@dimen/margin_view"
    android:background="@android:color/transparent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white_bg"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_save_pic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appointment_text_height"
            android:background="@drawable/dialog_top_bg"
            android:gravity="center"
            android:text="@string/pic_save"
            android:textColor="@color/e"
            android:textSize="@dimen/D" />

        <View style="@style/Line.Horizontal.Divider" />

        <TextView
            android:id="@+id/tv_share_pic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appointment_text_height"
            android:background="@drawable/dialog_center_bg"
            android:gravity="center"
            android:text="@string/pic_share"
            android:textColor="@color/e"
            android:textSize="@dimen/D" />

        <View style="@style/Line.Horizontal.Divider" />

        <TextView
            android:id="@+id/tv_cancel_pic_choice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appointment_text_height"
            android:background="@drawable/dialog_button_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/e"
            android:textSize="@dimen/D" />

    </LinearLayout>

</RelativeLayout>
